[package]
name = "mdbook-hide"
version = "0.3.0"
edition = "2021"
authors = ["Ankit R Gadiya <git@argp.in"]
description = "A preprocessor for mdbook that adds support for hidden chapters"
license = "BSD-3-Clause"
repository = "https://github.com/ankitrgadiya/mdbook-hide"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.12"
env_logger = "0.10.0"
log = "0.4.19"
mdbook = "0.4.34"
regex = "1.9.1"
semver = "1.0.17"
serde_json = "1.0.100"
